# analysis-flood-index

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/: example.cpp
experiments/: CMakeLists.txt  index_comparison_skewed_data_skewed_query.cpp  index_comparison_skewed_data_uniform_query.cpp  index_comparison_uniform_data_skewed_query.cpp  index_comparison_uniform_data_uniform_query.cpp  query_generator.h  rtree_vs_flood_skewed_data_skewed_query.cpp  rtree_vs_flood_skewed_data_uniform_query.cpp  rtree_vs_flood_uniform_data_skewed_query.cpp  rtree_vs_flood_uniform_data_uniform_query.cpp  utils,h
include/: Flood.h
scripts/: plot_index_comparison.py  run_all_index_comparison.sh
